test/TestPhases/parser/invalid/nonclosedcomment.blc
module

function f()
    var x: int32
    /* 
    x = 42
end
